bug fixing
fixed bug: highlight not aligned
fixed bug: document gets cut off
fixed bug: document doesn't shrink with page
bug: edge is still broken

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,3 +1,10 @@
+body, html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  min-height: 100%;
+}
+
 body {
   overflow-x: hidden;
   padding-top: 56px;
@@ -39,8 +46,17 @@ body {
   text-decoration: none;
 }
 
+#doc-view {
+  margin: 0;
+  padding: 0;
+  resize: none; 
+  width: 100%; 
+  border:none; 
+  background-color: transparent;
+}
+
 .sticky {
   position: -webkit-sticky; /* Safari */
   position: sticky;
-  top: 64;
+  top: 64px;
 }
